--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "eks-blueprints-test2",
+  "name": "eks-blueprints-test",
   "version": "0.1.0",
   "bin": {
-    "eks-blueprints-test2": "bin/eks-blueprints-test2.js"
+    "eks-blueprints-test-stack1": "bin/eks-blueprints-test-stack1.js"
   },
   "scripts": {
+    "basicStack": "cdk --app \"npx ts-node bin/eks-blueprints-test-stack1.ts\"",
+    "fullStack": "cdk --app \"npx ts-node bin/eks-blueprints-test-stack2.ts\"",
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
@@ -13,13 +15,14 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "22.5.4",
+    "aws-cdk": "2.162.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.162.1",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.2"
   },
   "dependencies": {
+    "@aws-quickstart/eks-blueprints": "^1.16.2",
     "aws-cdk-lib": "2.162.1",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
